# SuportLibrary

./: .gitignore  CMakeLists.txt  main.cpp
collectionOfShaders/: coloredShaderSource.txt  shaderSource.txt
include/: algorithms.h  drawSuport.h  fileSuport.h  linearAlgebra.h  networkingSuport.h  terminalSuport.h  textAndTimeSuport.h  vectorSuport.h
src/: CMakeLists.txt  algorithms.cpp  fileSuport.cpp  linearAlgebra.cpp  main.cpp  textAndTimeSuport.cpp
